create table app_users (
  id bigint generated by default as identity primary key,
  created_at timestamp with time zone not null,
  updated_at timestamp with time zone not null,
  email varchar(320) not null unique,
  password_hash varchar(255) not null,
  role varchar(32) not null,
  status varchar(32) not null
);
create table customer_profiles (
  id bigint generated by default as identity primary key,
  created_at timestamp with time zone not null,
  updated_at timestamp with time zone not null,
  user_id bigint not null unique references app_users(id),
  type varchar(32) not null,
  first_name varchar(100) not null,
  last_name varchar(100) not null,
  company_name varchar(180),
  phone varchar(50),
  tax_id varchar(80)
);
create table refresh_tokens (
  id bigint generated by default as identity primary key,
  created_at timestamp with time zone not null,
  updated_at timestamp with time zone not null,
  user_id bigint not null references app_users(id),
  token varchar(128) not null unique,
  expires_at timestamp with time zone not null,
  revoked boolean not null default false
);
create table stone_materials (
  id bigint generated by default as identity primary key,
  created_at timestamp with time zone not null,
  updated_at timestamp with time zone not null,
  name varchar(160) not null,
  slug varchar(180) not null unique,
  category varchar(100) not null,
  origin_country varchar(100),
  primary_color varchar(100),
  description varchar(4000),
  applications varchar(500),
  active boolean not null default true
);
create table stone_variants (
  id bigint generated by default as identity primary key,
  created_at timestamp with time zone not null,
  updated_at timestamp with time zone not null,
  material_id bigint not null references stone_materials(id),
  finish varchar(100) not null,
  thickness_mm numeric(8,2) not null,
  grade varchar(100),
  indicative_price numeric(19,2),
  active boolean not null default true
);
create table inventory_items (
  id bigint generated by default as identity primary key,
  created_at timestamp with time zone not null,
  updated_at timestamp with time zone not null,
  variant_id bigint not null unique references stone_variants(id),
  on_hand_m2 numeric(19,2) not null default 0,
  reserved_m2 numeric(19,2) not null default 0,
  min_stock_m2 numeric(19,2) not null default 0,
  version bigint
);
create table stock_movements (
  id bigint generated by default as identity primary key,
  created_at timestamp with time zone not null,
  updated_at timestamp with time zone not null,
  inventory_item_id bigint not null references inventory_items(id),
  type varchar(40) not null,
  quantity_m2 numeric(19,2) not null,
  reference_type varchar(120) not null,
  reference_id bigint not null,
  reason varchar(500) not null,
  actor_id bigint not null
);
create index idx_stone_materials_active on stone_materials(active);
create index idx_stock_movements_inventory_created on stock_movements(inventory_item_id, created_at);
