@startuml Univmar_Identity_Audit
title Univmar V1 — Identity, Security & Audit
left to right direction

skinparam dpi 170
skinparam backgroundColor white
skinparam shadowing false
skinparam roundcorner 8
skinparam linetype ortho
skinparam nodesep 34
skinparam ranksep 42
skinparam classAttributeIconSize 0
skinparam defaultFontName Arial
skinparam defaultFontSize 12
skinparam packageStyle rectangle
skinparam packageTitleAlignment center

skinparam class {
  BackgroundColor #FFFFFF
  BorderColor #64748B
  ArrowColor #64748B
  FontColor #0F172A
}

skinparam package {
  BackgroundColor #F8FAFC
  BorderColor #CBD5E1
  FontColor #0F172A
}

hide methods
hide empty members


class User {
  +id: Long
  +email: String
  +passwordHash: String
  +role: Role
  +status: AccountStatus
  +createdAt: Instant
  +updatedAt: Instant
}

class RefreshToken {
  +id: Long
  +tokenHash: String
  +expiresAt: Instant
  +revokedAt: Instant?
  +createdAt: Instant
}

class AuditEvent {
  +id: Long
  +action: String
  +entityType: String
  +entityId: Long?
  +detailsJson: Text?
  +createdAt: Instant
}

class CustomerProfile {
  +id: Long
  +customerType: CustomerType
  +firstName: String?
  +lastName: String?
  +companyName: String?
}

class RfqAttachment {
  +id: Long
  +originalFilename: String
  +storageKey: String
}

User "1" -- "0..*" RefreshToken : owns
User "0..1" -- "0..*" AuditEvent : actor
User "0..1" -- "0..1" CustomerProfile : portal account
RfqAttachment "0..*" --> "0..1" User : uploaded by

note bottom of User
  UNIQUE(email)
  Store only password hashes.
end note

note bottom of RefreshToken
  Store token hashes, not raw tokens.
end note
@enduml
